--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="./css/bootstrap.min.css">
 		<link rel="stylesheet" href="./css/font-awesome.css">
-		<link rel="stylesheet" href="./css/style.css">		
+		<link rel="stylesheet" href="./css/style.css">
 	</head>
 	<body>
-		
+
+		<div class="se-pre-con"></div>
 		<!-- Navigation Header -->
 
 		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -24,7 +25,7 @@
 					<img src="./Images/logo.png" width="65px" class="logo">
 					<a class="navbar-brand" href="#">SKCT CSE</a>
 				</div>
-		
+
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse navbar-ex1-collapse">
 					<ul class="nav navbar-nav navbar-right">
@@ -42,7 +43,7 @@
 								<li><a href="#">Programming Language Laboratory 2</a></li>
 							</ul>
 						</li>
-						<li><a href="#"><i class="fa fa-envelope"></i>CONTACT</a></li>
+						<li><a href="#contact"><i class="fa fa-envelope"></i>CONTACT</a></li>
 					</ul>
 				</div><!-- /.navbar-collapse -->
 			</div>
@@ -169,19 +170,19 @@
 							</thead>
 							<tbody>
 								<tr>
-									<td>2017</td>
+									<td>I Year</td>
 									<td>60</td>
 								</tr>
 								<tr>
-									<td>2016</td>
+									<td>II Year</td>
 									<td>60</td>
 								</tr>
 								<tr>
-									<td>2015</td>
+									<td>III Year</td>
 									<td>60</td>
 								</tr>
 								<tr>
-									<td>2014</td>
+									<td>IV Year</td>
 									<td>60</td>
 								</tr>
 							</tbody>
@@ -197,19 +198,19 @@
 							</thead>
 							<tbody>
 								<tr>
-									<td>I Year</td>
+									<td>2017</td>
 									<td>60</td>
 								</tr>
 								<tr>
-									<td>II Year</td>
+									<td>2016</td>
 									<td>60</td>
 								</tr>
 								<tr>
-									<td>III Year</td>
+									<td>2015</td>
 									<td>60</td>
 								</tr>
 								<tr>
-									<td>IV Year</td>
+									<td>2014</td>
 									<td>60</td>
 								</tr>
 							</tbody>
@@ -247,23 +248,86 @@
 								</p>
 							</div>
 						</div>
+						<div class="panel panel-default">
+							<div class="panel-body desk">
+							   <div class="col-xs-3 deskimage">
+								   <img src="./Images/Faculty/1. Dr. A.BALAMURUGAN, Professor and Head.jpg" class="img-responsive">
+							   </div>
+							</div>
+						</div>
 					</div>
 				</div>
+			</div>
+		</div>
+		<div class="container-fluid extra-container">
+			<div class="row">
+				<h3 class="text-center">VALUE ADDED COURSES</h3>
+				<hr class="pline">
+				<marquee scrolldelay="150">
+				<div class="col-xs-4 col-sm-4 col-lg-4">
+					<img src="./Images/Courses/c1.jpg" class="img-responsive"/>
+				</div>
+				<div class="col-xs-4 col-sm-4 col-lg-4">
+					<img src="./Images/Courses/c2.jpg" class="img-responsive"/>
+				</div>
+				<div class="col-xs-4 col-sm-4 col-lg-4">
+					<img src="./Images/Courses/c3.jpg" class="img-responsive"/>
+				</div>
+				</marquee>
+			</div>
+		</div>
+		<div class="container-fluid extra-container">
+			<div class="row">
+				<h3 class="text-center">PROFESSIONAL BODIES</h3>
+				<hr class="pline">
+				<marquee scrolldelay="250" direction="right">
+				<div class="col-xs-4 col-sm-4 col-lg-4 bodies">
+					<img src="./Images/Bodies/acm.jpg" class="img-responsive"/>
+				</div>
+				<div class="col-xs-4 col-sm-4 col-lg-4 bodies">
+					<img src="./Images/Bodies/csi_new_logo.jpg" class="img-responsive"/>
+				</div>
+				<div class="col-xs-4 col-sm-4 col-lg-4 bodies">
+					<img src="./Images/Bodies/ieee.jpg" class="img-responsive"/>
+				</div>
+				</marquee>
 			</div>
 		</div>
 		<div class="container-fluid contact-container">
 			<div class="row">
 				<div class="col-sm-4 col-lg-4">
-					<h3>CONTACT</h3>
+					<h3 class="white">CLUB ACTIVITIES</h3>
 					<hr class="cline" align="left">
-					<div class="panel panel-default">
-						<div class="panel-body">
-						   Basic panel example
+					<div class="panel panel-default" style="border:0px solid tranperent;box-shadow: 0 0 0 0;background: transparent;margin-top:5px;padding-bottom: 2px;">
+						<div class="panel-body club-box">
+							<p><i class="fa fa-arrow-right"></i><span class="club-name">Mobile Apps Club</span><p>
+							<p><i class="fa fa-arrow-right"></i><span class="club-name">Google Apps Club</span></p>
+							<p><i class="fa fa-arrow-right"></i><span class="club-name">OSI Club</span></p>
+							<p><i class="fa fa-arrow-right"></i><span class="club-name">Programming Club</span>	</p>											
 						</div>
 					</div>
-					
+				</div>
+				<div class="col-sm-5 col-lg-5" name="contact">
+					<h3 class="white">CONTACT</h3>
+					<hr class="cline" align="left">
+					<div class="panel panel-default" style="border:0px solid tranperent;box-shadow: 0 0 0 0;background: transparent;margin-top:5px;padding-bottom: 2px;padding-left:0px;">
+						<div class="panel-body address-box">
+						   <address>
+							   Dr.A.Balamurugan,<br>
+							   HOD CSE Department,<br>
+							   Sri Krishna College Of Technology,<br>
+							   Kovaipudhur,<br>
+							   Coimbatore-45.<br>
+							   <button type="button" class="btn btn-info contact-btn"><i class="fa fa-phone" style="border-right: 1px solid lavender;"> </i> +91-9942760018</button><br>
+						   	   <button type="button" class="btn btn-info contact-btn"><i class="fa fa-envelope-o" style="border-right: 1px solid lavender;"></i> mail@skct.edu.in</button>
+						   </address>
+						</div>
+					</div>
 				</div>
 			</div>
+		</div>
+		<div class="container-fluid footer">
+			<i class="fa fa-copyright"></i> SKCT 2017
 		</div>
 		<!-- jQuery -->
 		<script src="./js/jquery.js"></script>
@@ -271,18 +335,6 @@
 		<script src="./js/bootstrap.min.js"></script>
 		<!-- Bottom Notification -->
  		<script src="./js/notify.js"></script>
- 		<script type="text/javascript">
- 			    $(function(){
-				    $(".dropdown").hover(            
-				            function() {
-				                $('.dropdown-menu', this).stop( true, true ).fadeIn("fast");
-				                $(this).toggleClass('open');               
-				            },
-				            function() {
-				                $('.dropdown-menu', this).stop( true, true ).fadeOut("fast");
-				                $(this).toggleClass('open');               
-				            });
-				    });
- 		</script>
+ 		<script src="./js/Cse_Main.js"></script>
 	</body>
 </html>
